--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "server.js",
   "type": "module",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "crypto-js": "^4.2.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
